Add Auth Minter tutorial

--- a/docs/sidebars.yaml
+++ b/docs/sidebars.yaml
@@ -20,6 +20,7 @@
         - page: tutorials/quickstart/mint-and-burn-nftokens.md
         - page: tutorials/quickstart/transfer-nftokens.md
         - page: tutorials/quickstart/broker-sale.md
+        - page: tutorials/quickstart/authorize-minter.md
 - group: Understanding the XRPL
   page: concepts/understanding-xrpl/understanding-xrpl.md
   expanded: false
