--- a/docs/sidebars.yaml
+++ b/docs/sidebars.yaml
@@ -154,6 +154,7 @@
         - page: references/client-libraries.md
         - page: references/data-api.md
     - group: HTTP / WebSocket APIs
+      page: references/http-websocket-apis/index.mdx
       pages:
     - page: references/xrp-ledger-toml.md
 - group: Amendments
@@ -169,5 +170,4 @@
     - label: Code Samples
       page: code-samples/index.mdx
 
-- page: faq.md
 - page: releases.md
