Update infrastructure tutorials

--- a/docs/sidebars.yaml
+++ b/docs/sidebars.yaml
@@ -20,7 +20,7 @@
         - page: tutorials/quickstart/mint-and-burn-nftokens.md
         - page: tutorials/quickstart/transfer-nftokens.md
         - page: tutorials/quickstart/broker-sale.md
-        - page: tutorials/quickstart/authorize-minter.md
+        - page: tutorials/quickstart/authorize-minter.md     
 - group: Understanding the XRPL
   page: concepts/understanding-xrpl/understanding-xrpl.md
   expanded: false
@@ -158,6 +158,19 @@
       page: use-cases/interoperability/index.mdx
       pages:
         - page: use-cases/interoperability/sidechains.md
+        - label: Hooks
+          href: https://xrpl-hooks.readme.io/
+          external: true
+- group: XRPL Infrastructure
+  page: infrastructure/index.mdx
+  expanded: false
+  pages:
+    - label: rippled Server
+      href: https://xrpl.org/manage-the-rippled-server.html
+      external: true 
+    - label: Clio server
+      href: https://xrpl.org/manage-the-clio-server.html
+      external: true  
 - group: API Reference
   expanded: false
   pages:
