--- a/docs/sidebars.yaml
+++ b/docs/sidebars.yaml
@@ -21,6 +21,7 @@
         - page: tutorials/quickstart/transfer-nftokens.md
         - page: tutorials/quickstart/broker-sale.md
         - page: tutorials/quickstart/authorize-minter.md
+        - page: tutorials/quickstart/batch-minting.md
 - group: Understanding the XRPL
   page: concepts/understanding-xrpl/understanding-xrpl.md
   expanded: false
