--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "lottie-web": "^5.9.6",
     "marked": "^4.0.18",
     "preval.macro": "^5.0.0",
-    "react-bootstrap": "^2.5.0"
+    "react-bootstrap": "^2.5.0",
+    "react-ga": "^3.3.1"
   },
   "devDependencies": {
     "@types/jquery": "^3.5.14"
