chore: upgrade portal and add wrapping example

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,9 @@
       "@theme/*": [
         "./@theme/*",
         "./node_modules/@redocly/theme/src/*"
+      ],
+      "@portal/*": [
+        "./node_modules/@redocly/portal/dist/client/App/*"
       ]
     },
   }
