--- a/redocly.yaml
+++ b/redocly.yaml
@@ -23,11 +23,11 @@ theme:
       rel: stylesheet
     - href: https://fonts.googleapis.com/css?family=Source+Code+Pro:300,400,600,700&display=swap
       rel: stylesheet
-    - href: http://localhost:4000/css/devportal2022-v4.css
+    - href: ./static/css/devportal2022-v4.css
       rel: stylesheet
-    - href: http://localhost:4000/vendor/fontawesome/css/font-awesome.min.css
+    - href: ./static/vendor/fontawesome/css/font-awesome.min.css
       rel: stylesheet
-    - href: http://localhost:4000/css/fixes.css
+    - href: ./static/css/fixes.css
       rel: stylesheet
   scripts:
     head:
