Debugging CSS issue, remove ./static from href

--- a/redocly.yaml
+++ b/redocly.yaml
@@ -6,7 +6,7 @@ theme:
     keywords: XRP Ledger developer portal, api reference docs
     lang: en-US
   logo:
-    image: ./static/img/XRPLedger_DevPortal-white.svg
+    image: ./img/XRPLedger_DevPortal-white.svg
     altText: XRP Ledger Developer Portal
   markdown:
     editPage:
@@ -23,17 +23,17 @@ theme:
       rel: stylesheet
     - href: https://fonts.googleapis.com/css?family=Source+Code+Pro:300,400,600,700&display=swap
       rel: stylesheet
-    - href: ./static/css/devportal2022-v4.css
+    - href: ./css/devportal2022-v4.css
       rel: stylesheet
-    - href: ./static/vendor/fontawesome/css/font-awesome.min.css
+    - href: ./vendor/fontawesome/css/font-awesome.min.css
       rel: stylesheet
-    - href: ./static/css/fixes.css
+    - href: ./css/fixes.css
       rel: stylesheet
   scripts:
     head:
-      - src: ./static/js/xrpl-2.2.0.min.js
-      - src: ./static/js/jquery-3.6.0.min.js
-      - src: ./static/vendor/bootstrap.min.js
+      - src: ./js/xrpl-2.2.0.min.js
+      - src: ./js/jquery-3.6.0.min.js
+      - src: ./vendor/bootstrap.min.js
 
   ## NOTE: This is ignored. Our custom top nav uses top-nav.yaml instead.
   navbar: {}
